--- a/StudentInformation/App.config
+++ b/StudentInformation/App.config
@@ -9,6 +9,9 @@
         <add name="StudentInformation.My.MySettings.studentinfoConnectionString1"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;E:\src\windows form project\StudentInformation\studentinfo.mdf&quot;;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
+        <add name="StudentInformation.My.MySettings.studentinfoConnectionString2"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=F:\studentinfo.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
